# FFmpegTest

./: README.md
app/: CMakeLists.txt  build.gradle
app/ffmpeg-3.2.5/libavformat/: sapdec.c
app/src/androidTest/java/com/yan/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: cmdutils.c  ffmpeg.c  ffmpeg.h  ffmpeg_control.cpp  ffmpeg_control.h  ffmpeg_jni.cpp  native-lib.cpp  syn_queue.cpp  threadsafe_queue.cpp
app/src/main/java/com/yan/ffmpeg/: FFMPEGControl.java  MainActivity.java  MainActivityOldCamera.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/yan/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
